--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 Generate control realistic trajectory for a quadrotor.
 
 ## Overview
-This repository uses the quadrotor model from Peter Corke's Robotic Toolbox. Model file and required scripts are all included. Run the trajectory generator with `run_model.m` script. Simulation time, desired trajectory interval and plot enable can be changed in the script.
+This repository uses the quadrotor model from Peter Corke's Robotic Toolbox. Model file and required scripts are all included. Run the trajectory generator with `run_model.m` script. Simulation time, desired trajectory interval and plot enable flag can be changed in the script.
 Functions are tested with Matlab2014b.
 
 ## Files Description
@@ -11,5 +11,6 @@ Functions are tested with Matlab2014b.
 * `ctrl_param.m`: control parameters
 * `des_traj.m`: desired trajectory
 * `quadrotro_dynamics.m`: s-function for quadrotor dynamics
-* `quadrotor_plot.m`: s-function for visualize quadrotot flight during simulation
-* `compare_plot.m`: simple script to visualize different between desired trajectory and simulated trajectory output
+* `quadrotor_plot.m`: s-function for visualize quadrotor flight during simulation
+* `compare_plot.m`: simple script to visualize difference between desired trajectory and simulated trajectory output
+* `sl_quadrotor.mdl`: the quadrotor model with control loop
